[gd_scene load_steps=19 format=2]

[ext_resource path="res://Game/GUIComponents/PlayerIndicators/LifeBar.gd" type="Script" id=1]
[ext_resource path="res://Game/GUIComponents/PlayerIndicators/FoodBar.gd" type="Script" id=2]
[ext_resource path="res://Game/GUIComponents/PlayerIndicators/Backpack.tscn" type="PackedScene" id=3]
[ext_resource path="res://Game/Assets/Images/torch_progress.png" type="Texture" id=4]
[ext_resource path="res://Game/Assets/Images/torch_off.png" type="Texture" id=5]
[ext_resource path="res://Game/GUIComponents/PlayerIndicators/TorchIndicator.gd" type="Script" id=6]
[ext_resource path="res://Game/Assets/Fonts/Pixeled.ttf" type="DynamicFontData" id=7]
[ext_resource path="res://Game/Assets/Images/UI/GodSign.png" type="Texture" id=8]
[ext_resource path="res://Game/GUIComponents/PlayerIndicators/GodSignCounter.gd" type="Script" id=9]
[ext_resource path="res://Game/GUIComponents/PlayerIndicators/PlayerGodSignCounter.gd" type="Script" id=10]
[ext_resource path="res://Game/Assets/Images/Items/items.png" type="Texture" id=11]
[ext_resource path="res://Game/GUIComponents/PlayerIndicators/PlayerIndicators.gd" type="Script" id=12]
[ext_resource path="res://Game/GUIComponents/PlayerIndicators/Minimap.tscn" type="PackedScene" id=13]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.541176, 0.215686, 0.439216, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 0.33, 0, 0.2255, 1 )
border_blend = true
corner_radius_top_left = 3
corner_radius_top_right = 3
corner_radius_bottom_right = 3
corner_radius_bottom_left = 3
shadow_color = Color( 1, 0, 0.683333, 0.368627 )
shadow_size = 5

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0, 0, 0, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 0.541176, 0.215686, 0.439216, 1 )
border_blend = true
corner_radius_top_left = 3
corner_radius_top_right = 3
corner_radius_bottom_right = 3
corner_radius_bottom_left = 3
shadow_color = Color( 0.541176, 0.215686, 0.439216, 0.596078 )
shadow_size = 10

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0.180392, 0.490196, 0.466667, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 0, 0.33, 0.3025, 1 )
border_blend = true
corner_radius_top_left = 3
corner_radius_top_right = 3
corner_radius_bottom_right = 3
corner_radius_bottom_left = 3
shadow_color = Color( 0, 1, 0.916667, 0.368627 )
shadow_size = 5

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 0, 0, 0, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 0.180392, 0.490196, 0.466667, 1 )
border_blend = true
corner_radius_top_left = 3
corner_radius_top_right = 3
corner_radius_bottom_right = 3
corner_radius_bottom_left = 3
shadow_color = Color( 0.180392, 0.490196, 0.466667, 0.643137 )
shadow_size = 10

[sub_resource type="DynamicFont" id=5]
size = 8
outline_color = Color( 0, 0, 0, 1 )
use_mipmaps = true
use_filter = true
extra_spacing_top = -2
extra_spacing_char = 1
font_data = ExtResource( 7 )

[node name="PlayerIndicators" type="CanvasLayer"]
layer = 126
script = ExtResource( 12 )

[node name="GUI" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_bottom = -6.10352e-05
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LifeBarContainer" type="CenterContainer" parent="GUI"]
light_mask = 0
anchor_top = 0.2
anchor_right = 0.05
anchor_bottom = 0.8
margin_top = 384.0
margin_right = 352.0
margin_bottom = 32.0
rect_min_size = Vector2( 0, 32 )
rect_rotation = -90.0
rect_clip_content = true
mouse_filter = 2
size_flags_horizontal = 0
size_flags_vertical = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LifeBar" type="ProgressBar" parent="GUI/LifeBarContainer"]
light_mask = 0
margin_left = 32.0
margin_top = 9.0
margin_right = 352.0
margin_bottom = 23.0
rect_min_size = Vector2( 320, 14 )
rect_pivot_offset = Vector2( 160, 7 )
mouse_filter = 2
size_flags_horizontal = 0
custom_styles/fg = SubResource( 1 )
custom_styles/bg = SubResource( 2 )
value = 50.0
rounded = true
percent_visible = false
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LifeBarUpdateTimer" type="Timer" parent="GUI/LifeBarContainer"]
wait_time = 0.2
autostart = true

[node name="EnergyBarContainer" type="CenterContainer" parent="GUI"]
light_mask = 0
anchor_left = 0.95
anchor_top = 0.2
anchor_right = 1.0
anchor_bottom = 0.8
margin_top = 384.0
margin_right = 352.0
margin_bottom = 32.0
rect_min_size = Vector2( 0, 32 )
rect_rotation = -90.0
rect_clip_content = true
mouse_filter = 2
size_flags_horizontal = 0
size_flags_vertical = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="EnergyBar" type="ProgressBar" parent="GUI/EnergyBarContainer"]
light_mask = 0
margin_left = 32.0
margin_top = 9.0
margin_right = 352.0
margin_bottom = 23.0
rect_min_size = Vector2( 320, 14 )
rect_pivot_offset = Vector2( 160, 7 )
mouse_filter = 2
size_flags_horizontal = 0
custom_styles/fg = SubResource( 3 )
custom_styles/bg = SubResource( 4 )
value = 50.0
rounded = true
percent_visible = false
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="EnergyBarUpdateTimer" type="Timer" parent="GUI/EnergyBarContainer"]
wait_time = 0.1
autostart = true

[node name="InventoryArea" type="Control" parent="."]
anchor_top = 0.8
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PlayerGodSign" type="TextureRect" parent="InventoryArea"]
anchor_top = 1.0
anchor_bottom = 1.0
margin_top = -136.0
margin_right = 64.0
margin_bottom = -72.0
mouse_filter = 2
texture = ExtResource( 8 )
expand = true
stretch_mode = 1
script = ExtResource( 10 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Count" type="Label" parent="InventoryArea/PlayerGodSign"]
light_mask = 0
anchor_left = 0.5
anchor_top = 0.75
anchor_right = 0.5
anchor_bottom = 0.75
margin_left = -32.0
margin_top = -2.0
margin_right = 32.0
margin_bottom = 19.0
grow_vertical = 2
size_flags_horizontal = 2
size_flags_vertical = 2
custom_fonts/font = SubResource( 5 )
text = "??"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false,
"_editor_description_": ""
}

[node name="GodSignUpdateTimer" type="Timer" parent="InventoryArea/PlayerGodSign"]
wait_time = 0.5
autostart = true

[node name="Backpack" parent="InventoryArea" instance=ExtResource( 3 )]
anchor_top = 1.0
anchor_bottom = 1.0
margin_top = -64.0
margin_bottom = 0.0

[node name="TorchArea" type="Control" parent="InventoryArea"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -64.0
margin_top = -64.0
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Torch" type="Node2D" parent="InventoryArea/TorchArea"]
script = ExtResource( 6 )

[node name="ConsumingDelay" type="TextureProgress" parent="InventoryArea/TorchArea/Torch"]
margin_right = 64.0
margin_bottom = 64.0
mouse_filter = 2
rounded = true
allow_greater = true
allow_lesser = true
texture_under = ExtResource( 5 )
texture_progress = ExtResource( 4 )
fill_mode = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Countdown" type="Label" parent="InventoryArea/TorchArea/Torch"]
light_mask = 0
anchor_left = 0.048
anchor_top = 0.625
anchor_right = 0.238
anchor_bottom = 1.125
margin_left = 24.0
margin_top = 48.0
margin_right = 64.0
margin_bottom = 64.0
custom_fonts/font = SubResource( 5 )
text = "300 s"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false,
"_editor_description_": ""
}

[node name="TorchUpdateTimer" type="Timer" parent="InventoryArea/TorchArea/Torch"]
wait_time = 0.5
autostart = true

[node name="GodSign" type="TextureRect" parent="."]
anchor_left = 0.875
anchor_right = 1.0
anchor_bottom = 0.125
margin_left = -6.10352e-05
grow_horizontal = 0
mouse_filter = 2
size_flags_horizontal = 2
size_flags_vertical = 2
texture = ExtResource( 8 )
expand = true
stretch_mode = 1
script = ExtResource( 9 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Count" type="Label" parent="GodSign"]
light_mask = 0
anchor_left = 0.5
anchor_top = 0.75
anchor_right = 0.5
anchor_bottom = 0.75
margin_left = -40.0
margin_top = -3.8147e-06
margin_right = 40.0
margin_bottom = 21.0
grow_horizontal = 0
grow_vertical = 2
size_flags_horizontal = 2
size_flags_vertical = 2
custom_fonts/font = SubResource( 5 )
text = "?? +[??]"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false,
"_editor_description_": ""
}

[node name="GodSignUpdateTimer" type="Timer" parent="GodSign"]
wait_time = 0.5
autostart = true

[node name="Minimap" parent="." instance=ExtResource( 13 )]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -640.0
margin_bottom = -640.0
mouse_filter = 2

[node name="Coin" type="Sprite" parent="."]
visible = false
position = Vector2( 320, 328 )
texture = ExtResource( 11 )
vframes = 10
hframes = 10
frame = 23
[connection signal="timeout" from="GUI/LifeBarContainer/LifeBarUpdateTimer" to="GUI/LifeBarContainer/LifeBar" method="_on_LifeBarUpdateTimer_timeout"]
[connection signal="timeout" from="GUI/EnergyBarContainer/EnergyBarUpdateTimer" to="GUI/EnergyBarContainer/EnergyBar" method="_on_EnergyBarUpdateTimer_timeout"]
[connection signal="timeout" from="InventoryArea/PlayerGodSign/GodSignUpdateTimer" to="InventoryArea/PlayerGodSign" method="update_indicator"]
[connection signal="timeout" from="InventoryArea/TorchArea/Torch/TorchUpdateTimer" to="InventoryArea/TorchArea/Torch" method="_on_TorchUpdateTimer_timeout"]
[connection signal="timeout" from="GodSign/GodSignUpdateTimer" to="GodSign" method="update_indicator"]
